Fixed toggle icon not vertically aligned

--- a/src/mobile/pages/landing/landing.scss
+++ b/src/mobile/pages/landing/landing.scss
@@ -12,12 +12,13 @@
   }
 
   h1 {
-    font-size: 10.933vw;
+    font-size: 10.3334vw;
     font-weight: bold;
     line-height: 12vw;
     color: white;
     text-transform: capitalize;
     text-align:center;
+    padding: 0 5.334vw;
   }
 
   h3 {
